--- a/sparksql/pom.xml
+++ b/sparksql/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>cucumber-scala_2.12</artifactId>
             <version>4.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.paranamer</groupId>
+            <artifactId>paranamer</artifactId>
+            <version>2.8</version>
+        </dependency>
 
 
     </dependencies>
